--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- css -->
     <link rel="stylesheet" href="style.css" />
-    <!-- google icons -->
+    <!-- google icon -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
   </head>
   <body>
+    <div class="default-text">
+      <h1>ChatGPT Clone</h1>
+    </div>
     <div class="chat-container">
       <!-- <div class="chat outgoing">
         <div class="chat-content">
           <div class="chat-details">
-            <img src="./images/profile.jpg" alt="" />
-            <p>react nedir?</p>
+            <img src="./images/user.jpg" alt="" />
+            <p>react nedir</p>
           </div>
         </div>
-      </div>
-      <div class="chat incoming">
+      </div> -->
+      <!-- <div class="chat incoming">
         <div class="chat-content">
           <div class="chat-details">
             <img src="./images/chatbot.jpg" alt="" />
@@ -34,23 +38,26 @@
         </div>
       </div> -->
     </div>
+
     <div class="typing-container">
       <div class="typing-content">
         <div class="typing-textarea">
-          <textarea id="chat-input" placeholder="Enter a promt here"  required></textarea>
-          <span id="send-btn" class="material-symbols-outlined"> send </span>
+          <textarea
+            id="chat-input"
+            placeholder="Enter the data you want to search..."
+          ></textarea>
+          <span class="material-symbols-outlined" id="send-btn"> send </span>
         </div>
         <div class="typing-controls">
-          <span id="theme-btn" class="material-symbols-outlined">
+          <span class="material-symbols-outlined" id="theme-btn">
             light_mode
           </span>
-          <span id="delete-btn" class="material-symbols-outlined">
+          <span class="material-symbols-outlined" id="delete-btn">
             delete
           </span>
         </div>
       </div>
     </div>
-
     <script src="main.js"></script>
   </body>
 </html>
